# http-request-inspector

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: container.yml  release-please.yml
src/: main.rs
